# gen-X

./: .gitignore  LICENSE  README.md  TODO.md  algoritmo.py  pyproject.toml
Backend/: README.md
Backend/api/: admin.py  forms.py  models.py  permissions.py  serializer.py  urls.py  views.py
Backend/api/migrations/: 0001_initial.py
Backend/projeto/: settings.py  urls.py
Database/: BancodeDadosAndrey.sql  compose.yaml
Frontend/: README.md  index.html  package-lock.json  package.json
Frontend/a/: index.html
Frontend/cadastro-paciente/: index.html
Frontend/cadastro-responsavel/: index.html
Frontend/consulta/: index.html
Frontend/lista-sintomas/: index.html
Frontend/src/: proxy.js
Frontend/src/app/: globals.css  layout.js  page.js
Frontend/src/app/(private)/: layout.jsx
Frontend/src/app/(private)/configuracoes/: page.jsx
Frontend/src/app/(private)/dashboard/: page.jsx
Frontend/src/app/(private)/pacientes/: page.jsx
Frontend/src/app/(private)/relatorio/: page.jsx
Frontend/src/app/atendimento/: page.jsx
Frontend/src/app/login/: page.jsx
Frontend/src/components/: CPFInput.jsx  Header.jsx  PatientStatus.jsx  PhotoModal.jsx  ProtectedLayout.jsx  RiskBadge.jsx  RiskChart.jsx  ScoreResult.jsx  Sidebar.jsx  StatisticsCard.jsx  SymptomChecklist.jsx
Frontend/src/components/auth/: ProtectedRoute.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/mock/: patients.js  symptoms.js
Frontend/src/services/: AttendanceService.js  DoctorService.js  GuardianService.js  PatientService.js  authFetch.js
Frontend/src/utils/: calculateScore.js
(+9 files in other folders)
